--- a/hangcode/src/index.css
+++ b/hangcode/src/index.css
@@ -16,13 +16,24 @@ body {
 }
 
 .status {
-  background-color: #10A95B;
   color: white;
   padding: 10px;
   font-size: 1.1em;
-  height: min-content;
+  height: 91px;
   line-height: 50%;
   border-radius: 4px;
+}
+
+.status.win {
+  background-color: #10A95B;
+}
+
+.status.lost {
+  background-color: #cb3a3a;
+}
+
+.deadLanguage {
+  background-color: #961abc;
 }
 
 .status::first-line {
@@ -39,6 +50,27 @@ body {
 
 }
 
+span.language {
+  border-radius: 5px;
+  padding: 10px;
+  position: relative;
+}
+
+span.language.lost::before {
+  content: "💀";
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
+  border-radius: 5px;
+  font-size: 0.85rem;
+  top: 0;
+  left: 0;
+  background-color:rgba(0,0,0,0.5);
+}
+
 .language {
   padding: 10px;
   border-radius: 5px;
@@ -48,6 +80,7 @@ body {
   display: flex;
   gap: 5px;
   justify-content: center;
+  margin: 50px 0;
 }
 
 .word > p span {
@@ -59,6 +92,12 @@ body {
   font-size: 1.2em;
   font-weight: bold;
   text-transform: uppercase;
+  height: 44px;
+  width: 40px; /* Fixed width for letters */
+}
+
+.word > p span.missed-letter {
+  color: #ef4b4b;
 }
 
 .keyboard {
@@ -66,10 +105,10 @@ body {
   flex-wrap: wrap; 
   justify-content: center; 
   gap: 10px; /* Space between buttons */
-  max-width: 550px;
+  max-width: 590px;
 }
 
-.keyboard > button {
+.keyboard-button, .correct, .incorrect {
   color: #333;
   width: 50px; /* Fixed width for buttons */
   padding: 15px;
@@ -78,11 +117,23 @@ body {
   font-size: 1.2em;
   font-weight: bold;
   text-transform: uppercase;
-  background-color: #FCBA29;
   display: flex; /* Make button a flex container */
   justify-content: center; /* Center text horizontally */
   align-items: center; /* Center text vertically */
   cursor: pointer; /* Change cursor to pointer on hover */
+}
+
+.keyboard-button {
+  background-color: #FCBA29;
+}
+
+
+.correct {
+  background-color: #29bf72;
+}
+
+.incorrect {
+  background-color: #ef4b4b;
 }
 
 .restart {
@@ -96,4 +147,16 @@ body {
   margin-top: 20px;
   border: 1px solid #333;
   cursor: pointer; /* Change cursor to pointer on hover */
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap; 
+  border: 0;
 }
